style2.css
* 
{
    margin: 0;
    padding: 0;
    font-family: "Varela Round", sans-serif;
    color: white;
    scroll-behavior: smooth;
}

.navbar 
{
    height: 100%;
    width: 15vw;
    position: fixed;
    z-index: 1;
    background-color: black;
    overflow-x: hidden;
    transition: 0.2s;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    top: 0;
}
  
.navbar a 
{
    padding: 8px 8px 8px 32px;
    color: grey;
    display: block;
    transition: 0.1s;
    font-size: medium;
    text-decoration: none;
}
  
.navbar a:hover 
{
    color: #f1f1f1;
}

.landing
{
    background-color: #22272e;
    height: 100vh;
    width: 85vw;
    margin-left: 15vw;

    background-image: url("./images/img13.webp");
    background-size: cover;
    min-height: 100vh;
    max-height: fit-content;
    
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.portrait 
{
    height: 30vh;
    width: 30vh;
    border-radius: 10%;
    border: 3px solid white;
}

.left_side
{
    margin-top: 20vh;
    margin-left: 2vw;
}

.landing_horizontal
{
    margin-top: 20vh;

    display: flex;
    flex-direction: row;
    margin-right: 2vw;
}

.intro_header
{
    color: black;
    font-size: 3em;
    text-shadow: 1em;
}

.intro_header_title
{
    color: white;
    font-size: 2em;
}

.introduction
{
    color: black;
    font-size: 1.5em;
    font-weight: bold;    
}

.portfolio
{
    background-color: #dedede;
    /* height: 100vh; */
    width: 85vw;
    margin-left: 15vw;
    padding-bottom: 5vh;
}

.portfolio_header
{
    color: #282d38;
    font-size: 3em;
    text-shadow: 1em;

    /* align center */
    display: flex;
    justify-content: center;
    padding-top: 5vh;

    font-weight: 100;
    font-size: xx-large;
}


.card
{
    background-color: white;
    border-radius: 10px;
    width: 45vw;
    height: fit-content;
    margin: 5vh;
    padding: 2vh;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    text-align: center;
    overflow-y: hidden;
    border: 2px solid #282d38;
    margin-left: 20vw;

    display: flex;
    justify-content: space-evenly;
}

.card_project
{
    font-size: 2em;
    font-weight: 1;
    text-align: left;
    color: #282d38;
    padding-bottom: 1vh;
}

.card_title
{
    font-size: 1.5em;
    font-weight: 1;
    color: #282d38;
    text-align: left;
}

.card_description
{
    font-size: 1em;
    font-weight: 1;
    text-align: left;
    color: #282d38;
    padding-bottom: 1vh;

    padding: 3vh;
    font-size: 2vh;
}

.card_list_item
{
    padding: .5vh;
    color: #282d38;
}

.image_and_title 
{
    display: flex;
    flex-direction: row;
    /*
    justify-content: center;
    align-items: center; */
    align-items: left;
}

.card_image 
{
    padding-left: 1vh;
    height: 3vh;
    width: 3vh;
    /* align left */
}

.card_button_holder
{
    display: flex;
    flex-direction: column;
    /* justify-content: center; */

    align-items: center;
    justify-content: space-evenly;
}

.card_button
{
    display: block;
    background: green;
    color: white;
    padding: 15px 20px;
    margin: 20px 0;
    border-radius: 10px;
    box-shadow: rgba(0,0,0,0.9);
    text-decoration: none;
    border: 2px solid #282d38;

}

.card_button_link
{
    text-decoration: none;
}

.card_button:hover
{
    background: rgb(51, 163, 51);
    color: white;
    cursor: pointer;
    text-decoration: none;
}

.card_head_holder
{
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-right: 2vw;
}

.qualifications
{
    width: 85vw;
    margin-left: 15vw;
    padding-bottom: 5vh;

    background-image: url("./images/img16.jpeg");
    background-size: cover;
}

.qualifications_body
{
    display: flex;
    flex-direction: column-reverse;
    /* justify-content: center; */
    align-items: center;
}

.qualifications_text
{
    color:#282d38;
    background-color: rgb(255, 255, 255, 1);
    border-radius: 10px;
    width: 45vw;
    height: fit-content;
    margin: 5vh;
    padding: 2vh;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    text-align: center;
    overflow-y: hidden;
    border: 2px solid #282d38;
    font-size: large;
}

.qualifications_skills
{
    border-radius: 10px;
    width: 25vw;
    height: fit-content;
    padding: 2vh;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    overflow-y: hidden;
    border: 2px solid #282d38;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    background-color: rgb(255, 255, 255, 1);
}

.qualifications_side
{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.skills_card
{
    color: black;
}

.skills_header
{
    color: #282d38;
    font-size: 3em;
    text-shadow: 1em;
    font-weight: 100;
    font-size: xx-large;
    display: flex;
    align-items: center;
}


.resume_button
{
    display: block;
    background: green;
    color: white;
    padding: 15px 20px;
    margin: 20px 0;
    border-radius: 10px;
    box-shadow: rgba(0,0,0,0.9);
    text-decoration: none;
    height: 5vh;
    width: 10vw;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid #282d38;

}

.resume_button:hover
{
    background: rgb(51, 163, 51);
    color: white;
    cursor: pointer;
    text-decoration: none;
}

.services
{
    background-color: #dedede;
    /* height: 100vh; */
    width: 85vw;
    margin-left: 15vw;
    padding-bottom: 5vh;
}

.services_body
{
    display:flex;
    flex-direction: column;
    justify-content: center;
}

.services_card
{
    background-color: white;
    border-radius: 10px;
    width: 45vw;
    height: fit-content;
    margin: 5vh;
    padding: 2vh;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    /* text-align: center; */
    overflow-y: hidden;
    border: 2px solid #282d38;
    margin-left: 20vw;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.services_text
{
    color:black;
    font-size: large;
}

.services_card_head
{
    padding-right: 2vw;
}

.services_header
{
    color: #282d38;
    text-shadow: 1em;
    font-weight: 100;
    font-size: xx-large;
    display: flex;
    align-items: center;
}

.services_subheader
{
    color: #282d38;
    text-shadow: 1em;
    font-weight: 100;
    font-size: x-large;
    display: flex;
    align-items: center;
}

